<resources>

    <string name="app_name">SafarHamSafar</string>
    <string name="resend_otp_on_sms_whatsapp"><![CDATA[Resend OTP on SMS & WhatsApp]]></string>
    <string name="by_pressing_this_i_agree_to_receive_critical_messages_such_as_otp_bookig_details_on_whatsapp">By pressing this, I agree to receive critical messages such as OTP, bookig details on WhatsApp</string>
    <string name="accept_terms"><![CDATA[By Proceeding, you agree Safar Hamsafar\'s Privacy, User Agreement, T&Cs as well as Mobile Connects T&Cs]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="view_manage_trips">"View Manage Trips"</string>
    <string name="gift_cards">Gift Cards</string>
    <string name="shs_doubleblack">SHS DOUBLEBLACK</string>
    <string name="notifications">Notifications</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="trains_metro"><![CDATA[Trains & Metro]]></string>
    <string name="apts_homes"><![CDATA[Apts & Homes]]></string>
    <string name="meals_deals"><![CDATA[Meals & Deals]]></string>
    <string name="special_offer">- Special offer: Book 1 Room, Get a complimentary stay!!</string>
    <string name="dummy">dgcbu cdubdeuhc duchyuedhbc duhcyeoudbc cuyegbcubd ducgducb cudhcbufb cdubchfbc cufbcufb chfbcufbc chfuhjx ediheyugd eidhoyeg xuiehxguyv jboiyhjb xuwtfxtrdcs</string>
    <string name="room_upgrade_early_check_in_late_check_out_weekend_bogo"><![CDATA[Room Upgrade | Early Check-in & late Check-out | Weekend BOGO]]></string>
    <string name="rooms_guests"><![CDATA[ROOMS & GUESTS]]></string>
    <string name="grab_flat_10_off_enjoy_trip_anytime_in_the_next_12_months"><![CDATA[Grab flat 10% OFF* & enjoy trip anytime in the next 12 months]]></string>
    <string name="pre_book_your_holiday_for_rs_1000_enjoy_free_cancellation_upto_72_hours_before_travel_more"><![CDATA[Pre-book your holiday for Rs. 1000. Enjoy free cancellation upto 72 hours before travel & more]]></string>
    <string name="txt">Experience the Reimagined GINGER Goa, a fresh and unique concept which celebrates the wit and energy of a millennial mindset.</string>

</resources>